--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,10 @@ label {
 	font-weight: 600;
 }
 
+li {
+	cursor: pointer;
+}
+
 .modalCont {
 	height: 100vh;
 	width: 100vw;
@@ -36,11 +40,18 @@ label {
 
 .modalBox {
 	background: white;
-	width: 80%;
+	width: 60%;
 	height: 80%;
 	position: absolute;
 	top: 10%;
 	border-radius: 2em;
-	left: 10%;
-	padding: 2em;
+	left: 20%;
+	padding-left: 2em;
+	padding-right: 2em;
+}
+
+.players-container {
+	max-height: 50%; /* Ajusta la altura máxima del contenedor de la lista */
+	overflow-y: auto;
+	padding-left: 5em; /* Permite el desplazamiento vertical */
 }
