--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ li {
 }
 
 .modalBox {
-	background: white;
+	background: rgb(226, 221, 221);
 	width: 60%;
 	height: 80%;
 	position: absolute;
@@ -51,7 +51,15 @@ li {
 }
 
 .players-container {
-	max-height: 50%; /* Ajusta la altura máxima del contenedor de la lista */
+	max-height: 50%;
 	overflow-y: auto;
-	padding-left: 5em; /* Permite el desplazamiento vertical */
+	background-color: white;
+	border-radius: 1em;
+}
+
+.box {
+	background-color: rgba(228, 203, 61, 0.425);
+	margin-top: 4em;
+	padding: 4%;
+	border-radius: 1em;
 }
